# AdOpT-NET0

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CaseStudy_DAC.ipynb  CaseStudy_Networks.ipynb  CaseStudy_household.ipynb  CaseStudy_preprocessing.py  ConsortiumMeeting.ipynb  H2_test.py  InputDataToJSON.m  LICENSE  MES_NS_Baseline.py  MES_NS_Baseline_v2.py  MES_NS_Baseline_v2_CapacityDeficits.py  MES_NS_Baseline_v3.py  MES_NS_Baseline_v3_Playground.py  MES_NS_Baseline_v3_run_countries.py  MES_NS_Baseline_v4.py  MES_NS_Baseline_v5.py  MES_NS_Benchmark.py  MES_NS_Benchmark_v2.py  MES_NS_ElectricityGrid_Storage_v2.py  MES_NS_ElectricityGrid_v2.py  MES_NS_HydrogenGen_Transport_v2.py  MES_NS_HydrogenGen_v2.py  MES_NS_LimitedOnshoreElectrolysis.py  MES_NS_LowDemand_v3.py  MES_NS_NoInterconections.py  MES_NS_Storage_v2.py  MES_re_production.py  MES_test.py  OB_Check_File.py  OceanBatteryDemonstration.ipynb  OceanBattery_Main.py  OceanBattery_Main_2bp.py  OceanBattery_Main_Parallel.py  OceanBattery_PumpOptimization.py  OceanBattery_Zurich.py  PWACase.xlsx  (+42 more)
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: 00deploy.yml  00develop.yml  00publish.yml  00publish_tests.yml  autoformatting.yml  compile_pdf.yml  constraints.txt  deploy.yml  develop.yml  main.yml  pin_requirements.yml  publish.yml  test_00develop.yml  test_testing.yml  testing.yml  uploadpypi.yml
adopt_net0/: __init__.py  energyhub.py  logger.py  modelhub.py  utilities.py
adopt_net0/case_offshore_storage/: all_technologies.py  handle_input_data.py  modelhub.py  technology.py
adopt_net0/case_studies/: __init__.py  load_case_study_data.py
adopt_net0/components/: component.py  utilities.py
adopt_net0/data/: climate_data_offshore.txt  climate_data_onshore.txt
adopt_net0/data_management/: Preprocess compression function.py  __init__.py  handle_input_data.py  utilities.py
adopt_net0/data_preprocessing/: __init__.py  data_loading.py  template_creation.py
adopt_net0/database/: __init__.py  data_component.py  technology_database.py  utilities.py
adopt_net0/diagnostics/: __init__.py  check_infeasibilities.py
adopt_net0/model_construction/: __init__.py  construct_balances.py  construct_compressor.py  construct_investment_period.py  construct_networks.py  construct_nodes.py  utilities.py
adopt_net0/result_management/: read_results.py  save_results.py  utilities.py
adopt_net0/test/: test_balances.py  test_full_model_flow.py  test_networks.py  test_preprocessing.py  test_technologies.py
caseStudies/: CaseStudy_DAC.ipynb  CaseStudy_LargeEnergySystem.ipynb
caseStudies/Household/: TotalDemand_NT_2030_1995.csv  el_demand.csv  selectDemandProfile.py
caseStudies/data/: data_household.xlsx  data_network_rural.xlsx
case_study_results/: NodeLocations 1.csv  dac_casestudy.h5  household_casestudy.h5  network_part1_casestudy.h5  network_part2_casestudy.h5
cases/MES_NorthSea/: utilities.py
cases/NorthSea/: Networks_Connections.xlsx  WindParkData.csv  preprocess_input_data.py  preprocessing.py  preprocessing_simple.py  preprocessing_simple2.py  read_input_data.py
cases/NorthSea_helpers/: read_input_data.py  utilities.py
cases/NorthSea_v2/: read_input_data.py
cases/old/: MES_NS_Baseline.py  (+7 more)
data/: Pump_performance.csv  Turbine_performance.csv  climate_data_offshore.txt  climate_data_onshore.txt  climate_data_test.txt
docs/: conf.py  requirements.txt
joss_submission/: paper.bib  paper.md
mes_north_sea/: Scenarios.xlsx
old/: compile_demand.py
src/: DataHandle.py  Playground.py  compile_demand.py  config_model.py  construct_energybalance.py  construct_networks.py  construct_nodes.py  construct_technology.py  energyhub.py  generic_technology_constraints.py  global_variables.py  import_climate_data.py  logger.py  model_configuration.py  node_construction.py  technology_construction.py  technology_performance_fitting.py  utilities.py
test/: test_datahandle.py  test_energyhub.py  test_networks.py  test_subsets.py  test_technologies.py
tests/: Technologies.json  test_balances.py  test_database.py  test_full_model_flow.py  test_input_data_management.py  test_jupyter_notebooks.py  test_networks.py  test_preprocessing.py  test_technologies.py  utilities.py
userData/: resultsFull.xlsx  results_clustered.xlsx  results_full.xlsx
user_data/: CaseStudyNorthSea.xlsx  CaseStudyNorthSea_input  MultiCountry.xlsx  MultiCountry1.xlsx  MultiCountry1_detailed_1.xlsx  MultiCountry1_detailed_2.xlsx  MultiCountry_detailed_1.xlsx
(+1353 files in other folders)
