[tool.poetry]
name = "adopt_net0"
version = "0.1.0"  # Version is static, but you can use dynamic versioning if needed
description = "A python package for multi energy system modelling"
authors = [
  "Jan F. Wiegner <j.f.wiegner@uu.nl>",
  "Julia L. Tiggeloven <j.l.tiggeloven@uu.nl>",
  "Luca Bertoni <l.bertoni@uu.nl>",
  "Inge Ossentjuk <i.m.ossentjuk@uu.nl>",
  "Matteo Gazzani <m.gazzani@uu.nl>"
]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/UU-ER/AdOpT-NET0"
repository = "https://github.com/UU-ER/AdOpT-NET0"
documentation = "https://adopt-net0.readthedocs.io"

[tool.poetry.dependencies]
python = "^3.12"
tsam = ">=2.3.1"
Pyomo = ">=6.7.1"
numpy = ">=1.26.4"
pandas = ">=2.2.2"
requests = ">=2.31.0"
timezonefinder = ">=6.5.0"
statsmodels = ">=0.14.1"
pvlib = ">=0.10.4"
scipy = ">=1.13.0"
openpyxl = ">=3.1.2"
pytest = ">=8.1.1"
pwlf = ">=2.2.1"
gurobipy = ">=11.0.1"
scandir = ">=1.10.0"
tables = ">=3.9.2"

[tool.poetry.group.test.dependencies]
pytest = ">=8.1.1"
coverage = ">=7.6.7"

[tool.poetry.group.dev.dependencies]
pre-commit = ">=3.7.0"
black = ">=24.4.0"
sphinx = ">=7.3.7"
sphinx_rtd_theme = ">=2.0.0"

[tool.poetry.urls]
homepage = "https://github.com/UU-ER/AdOpT-NET0"
issues = "https://github.com/UU-ER/AdOpT-NET0/issues"
documentation = "https://adopt-net0.readthedocs.io"

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"